// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Advanced State Mapping - CSS Output @media query states should expand dimension shorthands in media queries 1`] = `
"@media (height > 800px) {.t0.t0 {padding-top: calc(6 * var(--gap)); padding-right: calc(6 * var(--gap)); padding-bottom: calc(6 * var(--gap)); padding-left: calc(6 * var(--gap));}}
@media (width < 600px) {.t0.t0 {padding-top: calc(2 * var(--gap)); padding-right: calc(2 * var(--gap)); padding-bottom: calc(2 * var(--gap)); padding-left: calc(2 * var(--gap));}}
@media not ((height > 800px)) and not ((width < 600px)) {.t0.t0 {padding-top: calc(4 * var(--gap)); padding-right: calc(4 * var(--gap)); padding-bottom: calc(4 * var(--gap)); padding-left: calc(4 * var(--gap));}}"
`;

exports[`Advanced State Mapping - CSS Output @media query states should expand tasty units in media queries 1`] = `
"@media (width <= calc(var(--gap) * 40)) {.t0.t0 {padding-top: calc(2 * var(--gap)); padding-right: calc(2 * var(--gap)); padding-bottom: calc(2 * var(--gap)); padding-left: calc(2 * var(--gap));}}
@media not ((width <= calc(var(--gap) * 40))) {.t0.t0 {padding-top: calc(4 * var(--gap)); padding-right: calc(4 * var(--gap)); padding-bottom: calc(4 * var(--gap)); padding-left: calc(4 * var(--gap));}}"
`;

exports[`Advanced State Mapping - CSS Output @media query states should generate CSS with @media wrapper for dimension queries 1`] = `
"@media (width <= 920px) {.t0.t0 {padding-top: calc(2 * var(--gap)); padding-right: calc(2 * var(--gap)); padding-bottom: calc(2 * var(--gap)); padding-left: calc(2 * var(--gap));}}
@media (width > 920px) {.t0.t0 {padding-top: calc(4 * var(--gap)); padding-right: calc(4 * var(--gap)); padding-bottom: calc(4 * var(--gap)); padding-left: calc(4 * var(--gap));}}"
`;

exports[`Advanced State Mapping - CSS Output @media query states should handle @media:type syntax 1`] = `
"@media print {.t0.t0 {display: none;}}
@media not (print) {.t0.t0 {display: block;}}"
`;

exports[`Advanced State Mapping - CSS Output @media query states should handle cascading media queries with overlapping ranges 1`] = `
"@media (width <= 920px) {.t0.t0 {grid-template-columns: 1fr;}}
@media (920px < width <= 1400px) {.t0.t0 {grid-template-columns: 1fr 1fr;}}
@media (width > 1400px) {.t0.t0 {grid-template-columns: 1fr 1fr 1fr;}}"
`;

exports[`Advanced State Mapping - CSS Output @media query states should handle media queries with range syntax 1`] = `
"@media (width >= 900px) {.t0.t0 {columns: 3;}}
@media (600px <= width < 900px) {.t0.t0 {columns: 2;}}
@media not ((width >= 900px)) and not ((600px <= width < 900px)) {.t0.t0 {columns: 1;}}"
`;

exports[`Advanced State Mapping - CSS Output @root states should generate CSS with :root prefix for root states 1`] = `
":root[data-theme="dark"] .t0.t0 {background-color: var(--dark-02-color);}
:root:not([data-theme="dark"]) .t0.t0 {background-color: var(--white-color);}
:root[data-theme="dark"] .t0.t0>* {--context-fill-color: var(--dark-02-color); --context-fill-color-rgb: var(--dark-02-color-rgb);}
:root:not([data-theme="dark"]) .t0.t0>* {--context-fill-color: var(--white-color); --context-fill-color-rgb: var(--white-color-rgb);}"
`;

exports[`Advanced State Mapping - CSS Output @root states should handle attribute-based root states 1`] = `
":root[data-high-contrast] .t0.t0 {background-color: var(--black-color);}
:root:not([data-high-contrast]) .t0.t0 {background-color: var(--white-color);}
:root[data-high-contrast] .t0.t0>* {--context-fill-color: var(--black-color); --context-fill-color-rgb: var(--black-color-rgb);}
:root:not([data-high-contrast]) .t0.t0>* {--context-fill-color: var(--white-color); --context-fill-color-rgb: var(--white-color-rgb);}"
`;

exports[`Advanced State Mapping - CSS Output @root states should handle class-based root states 1`] = `
":root.compact-mode .t0.t0 {background-color: var(--gray-05-color);}
:root:not(.compact-mode) .t0.t0 {background-color: var(--white-color);}
:root.compact-mode .t0.t0>* {--context-fill-color: var(--gray-05-color); --context-fill-color-rgb: var(--gray-05-color-rgb);}
:root:not(.compact-mode) .t0.t0>* {--context-fill-color: var(--white-color); --context-fill-color-rgb: var(--white-color-rgb);}"
`;

exports[`Advanced State Mapping - CSS Output combined advanced states with regular modifiers should combine media queries with regular modifiers 1`] = `
".t0.t0:not([data-hovered]) {padding-top: calc(4 * var(--gap)); padding-right: calc(4 * var(--gap)); padding-bottom: calc(4 * var(--gap)); padding-left: calc(4 * var(--gap));}
.t0.t0[data-hovered] {padding-top: calc(5 * var(--gap)); padding-right: calc(5 * var(--gap)); padding-bottom: calc(5 * var(--gap)); padding-left: calc(5 * var(--gap));}"
`;

exports[`Advanced State Mapping - CSS Output combined advanced states with regular modifiers should handle root states with regular modifiers 1`] = `
".t0.t0:not([data-disabled]) {background-color: var(--white-color);}
.t0.t0:not([data-disabled])>* {--context-fill-color: var(--white-color); --context-fill-color-rgb: var(--white-color-rgb);}
.t0.t0[data-disabled] {background-color: var(--gray-03-color);}
.t0.t0[data-disabled]>* {--context-fill-color: var(--gray-03-color); --context-fill-color-rgb: var(--gray-03-color-rgb);}"
`;

exports[`Advanced State Mapping - CSS Output complex combinations should handle advanced states with multiple modifiers 1`] = `
".t0.t0:not([data-hovered]) {padding-top: calc(4 * var(--gap)); padding-right: calc(4 * var(--gap)); padding-bottom: calc(4 * var(--gap)); padding-left: calc(4 * var(--gap));}
.t0.t0[data-hovered] {padding-top: calc(5 * var(--gap)); padding-right: calc(5 * var(--gap)); padding-bottom: calc(5 * var(--gap)); padding-left: calc(5 * var(--gap));}"
`;

exports[`Advanced State Mapping - CSS Output complex combinations should handle cascading root states with specificity 1`] = `
":root[data-mode="compact"] .t0.t0 {background-color: var(--gray-02-color);}
:root[data-theme="light"] .t0.t0 {background-color: var(--light-01-color);}
:root[data-theme="dark"] .t0.t0 {background-color: var(--dark-02-color);}
:root:not([data-mode="compact"]):not([data-theme="light"]):not([data-theme="dark"]) .t0.t0 {background-color: var(--white-color);}
:root[data-mode="compact"] .t0.t0>* {--context-fill-color: var(--gray-02-color); --context-fill-color-rgb: var(--gray-02-color-rgb);}
:root[data-theme="light"] .t0.t0>* {--context-fill-color: var(--light-01-color); --context-fill-color-rgb: var(--light-01-color-rgb);}
:root[data-theme="dark"] .t0.t0>* {--context-fill-color: var(--dark-02-color); --context-fill-color-rgb: var(--dark-02-color-rgb);}
:root:not([data-mode="compact"]):not([data-theme="light"]):not([data-theme="dark"]) .t0.t0>* {--context-fill-color: var(--white-color); --context-fill-color-rgb: var(--white-color-rgb);}"
`;

exports[`Advanced State Mapping - CSS Output complex combinations should handle combined media and root states on same property 1`] = `
"@media (width >= 1200px) {.t0.t0 {padding-top: calc(6 * var(--gap)); padding-right: calc(6 * var(--gap)); padding-bottom: calc(6 * var(--gap)); padding-left: calc(6 * var(--gap));}}
@media (width < 600px) {.t0.t0 {padding-top: calc(2 * var(--gap)); padding-right: calc(2 * var(--gap)); padding-bottom: calc(2 * var(--gap)); padding-left: calc(2 * var(--gap));}}
@media not ((width >= 1200px)) and not ((width < 600px)) {:root[data-theme="dark"] .t0.t0 {padding-top: calc(3 * var(--gap)); padding-right: calc(3 * var(--gap)); padding-bottom: calc(3 * var(--gap)); padding-left: calc(3 * var(--gap));}}
@media not ((width >= 1200px)) and not ((width < 600px)) {:root:not([data-theme="dark"]) .t0.t0 {padding-top: calc(4 * var(--gap)); padding-right: calc(4 * var(--gap)); padding-bottom: calc(4 * var(--gap)); padding-left: calc(4 * var(--gap));}}"
`;

exports[`Advanced State Mapping - CSS Output complex combinations should handle media queries on different dimensions 1`] = `
"@media (height < 400px) {.t0.t0 {padding-top: var(--gap); padding-right: var(--gap); padding-bottom: var(--gap); padding-left: var(--gap);}}
@media (width < 600px) {.t0.t0 {padding-top: calc(2 * var(--gap)); padding-right: calc(2 * var(--gap)); padding-bottom: calc(2 * var(--gap)); padding-left: calc(2 * var(--gap));}}
@media not ((height < 400px)) and not ((width < 600px)) {.t0.t0 {padding-top: calc(4 * var(--gap)); padding-right: calc(4 * var(--gap)); padding-bottom: calc(4 * var(--gap)); padding-left: calc(4 * var(--gap));}}"
`;

exports[`Advanced State Mapping - CSS Output complex combinations should handle multiple root states 1`] = `
":root[data-high-contrast] .t0.t0 {background-color: var(--black-color);}
:root[data-theme="dark"] .t0.t0 {background-color: var(--dark-02-color);}
:root:not([data-high-contrast]):not([data-theme="dark"]) .t0.t0 {background-color: var(--white-color);}
:root[data-high-contrast] .t0.t0>* {--context-fill-color: var(--black-color); --context-fill-color-rgb: var(--black-color-rgb);}
:root[data-theme="dark"] .t0.t0>* {--context-fill-color: var(--dark-02-color); --context-fill-color-rgb: var(--dark-02-color-rgb);}
:root:not([data-high-contrast]):not([data-theme="dark"]) .t0.t0>* {--context-fill-color: var(--white-color); --context-fill-color-rgb: var(--white-color-rgb);}"
`;

exports[`Advanced State Mapping - CSS Output complex combinations should handle nested container queries (jsdom limitation) 1`] = `""`;

exports[`Advanced State Mapping - CSS Output complex combinations should handle predefined states with modifiers 1`] = `
".t0.t0:not([data-hovered]) {padding-top: calc(4 * var(--gap)); padding-right: calc(4 * var(--gap)); padding-bottom: calc(4 * var(--gap)); padding-left: calc(4 * var(--gap));}
.t0.t0[data-hovered] {padding-top: calc(5 * var(--gap)); padding-right: calc(5 * var(--gap)); padding-bottom: calc(5 * var(--gap)); padding-left: calc(5 * var(--gap));}"
`;

exports[`Advanced State Mapping - CSS Output complex combinations should handle root states with pseudo-class modifiers 1`] = `
".t0.t0:not([data-hovered]) {background-color: var(--white-color);}
.t0.t0:not([data-hovered])>* {--context-fill-color: var(--white-color); --context-fill-color-rgb: var(--white-color-rgb);}
.t0.t0[data-hovered] {background-color: var(--gray-01-color);}
.t0.t0[data-hovered]>* {--context-fill-color: var(--gray-01-color); --context-fill-color-rgb: var(--gray-01-color-rgb);}"
`;

exports[`Advanced State Mapping - CSS Output complex combinations should handle sub-elements with multiple advanced states 1`] = `
".t0.t0 {padding-top: calc(4 * var(--gap)); padding-right: calc(4 * var(--gap)); padding-bottom: calc(4 * var(--gap)); padding-left: calc(4 * var(--gap));}
@media (width < 600px) {.t1.t1 [data-element="Header"] {padding-top: var(--gap); padding-right: var(--gap); padding-bottom: var(--gap); padding-left: var(--gap);}}
@media (width >= 600px) {:root[data-theme="dark"] .t1.t1 [data-element="Header"] {padding-top: calc(3 * var(--gap)); padding-right: calc(3 * var(--gap)); padding-bottom: calc(3 * var(--gap)); padding-left: calc(3 * var(--gap));}}
@media (width >= 600px) {:root:not([data-theme="dark"]) .t1.t1 [data-element="Header"] {padding-top: calc(2 * var(--gap)); padding-right: calc(2 * var(--gap)); padding-bottom: calc(2 * var(--gap)); padding-left: calc(2 * var(--gap));}}"
`;

exports[`Advanced State Mapping - CSS Output complex combinations should handle three-way media query cascade 1`] = `
"@media (width <= 400px) {.t0.t0 {columns: 1;}}
@media (400px < width <= 800px) {.t0.t0 {columns: 2;}}
@media (800px < width <= 1200px) {.t0.t0 {columns: 3;}}
@media (width > 1200px) {.t0.t0 {columns: 4;}}"
`;

exports[`Advanced State Mapping - CSS Output edge cases should handle advanced states with complex style values 1`] = `
"@media (width < 600px) {.t0.t0 {border: var(--border-width) none var(--border-color);}}
@media (width >= 600px) {:root[data-theme="dark"] .t0.t0 {border: var(--border-width) solid var(--dark-05-color);}}
@media (width >= 600px) {:root:not([data-theme="dark"]) .t0.t0 {border: var(--border-width) solid var(--border-color);}}"
`;

exports[`Advanced State Mapping - CSS Output edge cases should handle advanced states with fallback color syntax 1`] = `
":root[data-theme="dark"] .t0.t0 {background-color: var(--dark-surface-color, var(--dark-02-color));}
:root:not([data-theme="dark"]) .t0.t0 {background-color: var(--surface-color, var(--white-color));}
:root[data-theme="dark"] .t0.t0>* {--context-fill-color: var(--dark-surface-color, var(--dark-02-color)); --context-fill-color-rgb: var(--dark-surface-color-rgb, var(--dark-02-color-rgb));}
:root:not([data-theme="dark"]) .t0.t0>* {--context-fill-color: var(--surface-color, var(--white-color)); --context-fill-color-rgb: var(--surface-color-rgb, var(--white-color-rgb));}"
`;

exports[`Advanced State Mapping - CSS Output predefined states (global) should handle multiple global predefined states 1`] = `
"@media (width >= 1024px) {.t0.t0 {padding-top: calc(4 * var(--gap)); padding-right: calc(4 * var(--gap)); padding-bottom: calc(4 * var(--gap)); padding-left: calc(4 * var(--gap));}}
@media (768px <= width < 1024px) {.t0.t0 {padding-top: calc(3 * var(--gap)); padding-right: calc(3 * var(--gap)); padding-bottom: calc(3 * var(--gap)); padding-left: calc(3 * var(--gap));}}
@media (width < 768px) {.t0.t0 {padding-top: var(--gap); padding-right: var(--gap); padding-bottom: var(--gap); padding-left: var(--gap);}}"
`;

exports[`Advanced State Mapping - CSS Output predefined states (global) should prioritize local over global predefined states 1`] = `".t0.t0 {padding-top: calc(2 * var(--gap)); padding-right: calc(2 * var(--gap)); padding-bottom: calc(2 * var(--gap)); padding-left: calc(2 * var(--gap));}"`;

exports[`Advanced State Mapping - CSS Output predefined states (global) should resolve global predefined states 1`] = `".t0.t0 {padding-top: calc(2 * var(--gap)); padding-right: calc(2 * var(--gap)); padding-bottom: calc(2 * var(--gap)); padding-left: calc(2 * var(--gap));}"`;

exports[`Advanced State Mapping - CSS Output predefined states (local) should handle multiple local predefined states 1`] = `".t0.t0 {padding-top: calc(4 * var(--gap)); padding-right: calc(4 * var(--gap)); padding-bottom: calc(4 * var(--gap)); padding-left: calc(4 * var(--gap));}"`;

exports[`Advanced State Mapping - CSS Output predefined states (local) should resolve local predefined states to their definitions 1`] = `".t0.t0 {padding-top: calc(2 * var(--gap)); padding-right: calc(2 * var(--gap)); padding-bottom: calc(2 * var(--gap)); padding-left: calc(2 * var(--gap));}"`;

exports[`Advanced State Mapping - CSS Output sub-element advanced states should apply @own state to sub-element 1`] = `
".t0.t0 {background-color: var(--white-color);}
.t0.t0>* {--context-fill-color: var(--white-color); --context-fill-color-rgb: var(--white-color-rgb);}
.t1.t1 [data-element="Label"] {color: var(--purple-color); --current-color: var(--purple-color); --current-color-rgb: var(--purple-color-rgb);}"
`;

exports[`Advanced State Mapping - CSS Output sub-element advanced states should apply media queries to sub-element styles 1`] = `
".t0.t0 {padding-top: calc(4 * var(--gap)); padding-right: calc(4 * var(--gap)); padding-bottom: calc(4 * var(--gap)); padding-left: calc(4 * var(--gap));}
@media (width < 600px) {.t1.t1 [data-element="Header"] {padding-top: var(--gap); padding-right: var(--gap); padding-bottom: var(--gap); padding-left: var(--gap);}}
@media (width >= 600px) {.t1.t1 [data-element="Header"] {padding-top: calc(2 * var(--gap)); padding-right: calc(2 * var(--gap)); padding-bottom: calc(2 * var(--gap)); padding-left: calc(2 * var(--gap));}}"
`;

exports[`Advanced State Mapping - CSS Output sub-element advanced states should apply root states to sub-element styles 1`] = `
".t0.t0 {background-color: var(--white-color);}
.t0.t0>* {--context-fill-color: var(--white-color); --context-fill-color-rgb: var(--white-color-rgb);}
:root[data-theme="dark"] .t1.t1 [data-element="Header"] {background-color: var(--dark-03-color);}
:root:not([data-theme="dark"]) .t1.t1 [data-element="Header"] {background-color: var(--gray-02-color);}
:root[data-theme="dark"] .t1.t1 [data-element="Header"]>* {--context-fill-color: var(--dark-03-color); --context-fill-color-rgb: var(--dark-03-color-rgb);}
:root:not([data-theme="dark"]) .t1.t1 [data-element="Header"]>* {--context-fill-color: var(--gray-02-color); --context-fill-color-rgb: var(--gray-02-color-rgb);}"
`;

exports[`Advanced State Mapping - CSS Output sub-element advanced states should combine @own state with media query 1`] = `
"@media (width < 600px) {.t0.t0 [data-element="Label"] {font-size: 14px;}}
@media (width >= 600px) {.t0.t0 [data-element="Label"] {font-size: 16px;}}"
`;

exports[`Advanced State Mapping - CSS Output sub-element advanced states should combine @own state with parent modifiers 1`] = `
".t0.t0:not([data-disabled]) [data-element="Icon"] {color: var(--gray-color); --current-color: var(--gray-color); --current-color-rgb: var(--gray-color-rgb);}
.t0.t0[data-disabled] [data-element="Icon"] {color: var(--light-gray-color); --current-color: var(--light-gray-color); --current-color-rgb: var(--light-gray-color-rgb);}"
`;

exports[`Advanced State Mapping - CSS Output sub-element advanced states should handle negated @own state 1`] = `".t0.t0 [data-element="Label"] {opacity: 0.7;}"`;
